Committing some updates before edit round 1

--- a/Hhh/Hhh.tex
+++ b/Hhh/Hhh.tex
@@ -275,7 +275,7 @@ in events passing the selection of the \etau channel as described in section
 \ref{sec:hhh_selection_etau}, with the 2-jet requirement lifted.
 
 Differences in \MET resolution and response between data and \ac{MC} are accounted for by
-applying Z--recoil corrections to DY, \Wjets and signal \ac{MC} events. Chapter \ref{chap:objects} 
+applying Z--recoil corrections to DY, \Wjets and signal \ac{MC} events. Section \ref{sec:objects_met_recoilcorr} 
 gives more details on how these corrections are derived.
 
 To correct for the difference in b--tagging efficiency and light jet mis--tagging
@@ -447,7 +447,7 @@ than 70 GeV is used in the 2jet-0tag and 2jet-1tag categories.
 Contributions from other backgrounds are subtracted 
 from the data in this region, and a high-\mT~to low- \mT~
 extrapolation factor is determined from the \Wjets \ac{MC} 
-samples. The yield in the signal region is given by the data yield in the high-\mT sideband, with
+samples. The yield in the signal region is given by the data yield in the high-\mT~sideband, with
 other backgrounds subtracted, multiplied by this extrapolation factor.
 In the 2jet-2tag category, a slightly different high-\mT~sideband of 60-120 GeV is used 
 to give more events for the \Wjets estimate after other backgrounds are
