Detailed edit of detector chapter

--- a/backmatter.tex
+++ b/backmatter.tex
@@ -21,7 +21,7 @@
 \acro{MC}[MC]{Monte Carlo}
 \acro{CKM}[CKM]{Cabibbo-Kobayashi-Maskawa}
 \acro{CMS}[CMS]{Compact Muon Solenoid}
-\acro{LHC}[LHC]{Large Hadron Colider}
+\acro{LHC}[LHC]{Large Hadron Collider}
 \acro{CERN}[CERN]{the European Organisation for Nuclear Research }
 \acro{PS}[PS]{Proton Synchrotron}
 \acro{SPS}[SPS]{Super Proton Synchrotron}
@@ -31,8 +31,8 @@
 \acro{SM}[SM]{standard model}
 \acro{SUSY}[SUSY]{supersymmetry}
 \acro{2HDM}[2HDM]{Two Higgs Doublet Model}
-\acro{ECAL}[ECAL]{Electromagnetic calorimeter}
-\acro{HCAL}[HCAL]{Hadron calorimeter}
+\acro{ECAL}[ECAL]{electromagnetic calorimeter}
+\acro{HCAL}[HCAL]{hadron calorimeter}
 \acro{TIB}[TIB]{Tracker Inner Barrel}
 \acro{TID}[TID]{Tracker Inner Disk}
 \acro{TOB}[TOB]{Tracker Outer Barrel}
@@ -47,7 +47,7 @@
 \acro{L1}[L1]{Level-1}
 \acro{HLT}[HLT]{High-level trigger}
 \acro{CSCs}[CSCs]{Cathode Strip Chambers}
-\acro{DT}[DT]{Drift Tube}
+\acro{DTs}[DTs]{Drift Tube chambers}
 \acro{RPCs}[RPCs]{Resistive Plate Chambers}
 \acro{DAQ}[DAQ]{Data Acquisition}
 \acro{WLCG}[WLCG]{Worldwide LHC Computing Grid}
