Committing a few changes before continuing edit

--- a/MSSM/MSSM.tex
+++ b/MSSM/MSSM.tex
@@ -1803,7 +1803,7 @@ correlations used for this combination are given in table \ref{tab:mssm_combinat
 with the motivation for the chosen correlation given in the third column of the table.
 The chosen correlation scheme is motivated
 by carefully considering the differences between the two analyses
-and the conditions under which they were perofrmed.
+and the conditions under which they were performed.
 
 %The correct way to establish the correlations is to perform
 %dedicated studies into them. In many cases such studies would be 
