--- a/Objects/Objects.tex
+++ b/Objects/Objects.tex
@@ -754,7 +754,7 @@ within $\Delta z<0.4$~cm of the same vertex, and their total charge is required 
 
 %\subsection{Isolation and discrimination against light leptons}
 %\label{sec:objects_tau_iso}
-Requiring the reconstructed $\Pgt_{h}$ to be isolated reduces the jet $\rightarrow\Pgt_{h}$ fake rate. Isolation
+Requiring the reconstructed \Pgth to be isolated reduces the jet $\rightarrow\Pgt_{h}$ fake rate. Isolation
 discriminators can be defined using the isolation sum,
 \begin{equation}\label{eqn:cutbased_iso}
 I_{\Pgt} = \Sigma p_{\text{T}}^{\text{charged}}(d_Z < 0.2\text{ cm }) + \text{max}(0,\Sigma p_{\text{T}}^{\Pphoton} - \Delta \beta \Sigma p_{\text{T}}^{\text{charged}} (d_Z > 0.2 \text{ cm }) ),
