--- a/preamble.tex
+++ b/preamble.tex
@@ -54,6 +54,7 @@
 \usepackage{hepnames}
 \usepackage{hepunits}
 \DeclareRobustCommand{\arXivCode}[1]{arXiv:#1}
+\DeclareRobustCommand{\Pgth}{\HepParticle{\tau}{h}{}\xspace}
 \DeclareRobustCommand{\Htohh}{\HepProcess{ \PHiggs \to \PHiggslight \PHiggslight}\xspace}
 \DeclareRobustCommand{\Htohhtobbtautau}{\HepProcess{ \PHiggs \to \PHiggslight \PHiggslight \to \Pbottom \Pbottom \Pgt \Pgt}\xspace}
 \DeclareRobustCommand{\htotautau}{\HepProcess{ \PHiggslight \to \Pgt \Pgt}\xspace}
