Edit of objects section

--- a/MSSM/MSSM.tex
+++ b/MSSM/MSSM.tex
@@ -23,7 +23,7 @@ as well as studies of background methods for the \mutau, \etau and \tautau chann
 evaluation of systematic uncertainties in all four channels, and production of
 the statistical results, including model interpretations.
 
-\section{Datasets and MC samples}
+\section{Datasets and \acs{MC} samples}
 \label{sec:mssm_datasets}
 The dataset used for this analysis corresponds to an integrated 
 luminosity of 12.9 fb$^{-1}$ collected at a centre--of--mass
@@ -583,7 +583,7 @@ The total transverse mass variable separates the signal and these backgrounds we
 
 
 
-\section{\ac{MC} to data correction factors}
+\section{\acs{MC} to data correction factors}
 \label{sec:mssm_mccorrs}
 Because \ac{MC} samples are used for the signal prediction, and 
 to estimate some of the backgrounds, it is important to correct for possible 
